--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -80,6 +80,7 @@ flutter:
   - assets/google.png
   - assets/facebook.png
   - assets/logo.png
+  - assets/islah.jpg
   - genshin_character/Kaeya.png
   - genshin_character/Albedo.png
   - genshin_character/Aloy.png
